# AtomUI

./: .gitattributes  .gitignore  AtomUI.sln  AtomUI.sln.DotSettings  AtomUI.slnx  CODE_OF_CONDUCT.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  README.md  README.nuget.md  README.zh-CN.md  Settings.XamlStyler  Untitled.DotSettings  azure-pipelines.yml
.github/workflows/: release-atomui-native.yml  release-atomui-test.yml  release-atomui.yml  release-gallery.yml
Samples/AtomUI.Demo.Desktop/: App.axaml  App.axaml.cs  AtomUI.Demo.Desktop.csproj  Program.cs  Roots.xml  app.manifest
controlgallery/AtomUIGallery/: AtomUIGallery.csproj  BaseGalleryApplication.axaml  BaseGalleryApplication.axaml.cs  Constants.cs  ThemeManagerBuilderExtensions.cs
controlgallery/AtomUIGallery.Desktop/: AtomUIGallery.Desktop.csproj  GalleryApplication.cs  GalleryAtomApplication.cs  Program.cs  Roots.xml  app.manifest
controlgallery/AtomUIGallery.Icons.Desktop/: AtomUIGallery.Icons.Desktop.csproj  GalleryIconProvider.cs
nativelibs/: .gitignore  CMakeLists.txt  xmake.lua
nativelibs/cmake/modules/: AddCustomCommandTarget.cmake  FindGoogleTest.cmake  HandleAppPath.cmake  HandleConfig.cmake  HandleHostEnv.cmake  HandleRequirePackages.cmake  ImportThirdparty.cmake  MetaInfo.cmake  SetIfArchBitness.cmake  SummaryOutput.cmake  TargetUtils.cmake  TestUtils.cmake  Utils.cmake
nativelibs/include/atomui/: CMakeLists.txt  Compiler.h  Config.h.in  Global.h  ProcessorDetection.h  SystemDetection.h  WindowUtils.h  xmake.lua
nativelibs/include/atomui/bridge/: WindowUtils.h
nativelibs/src/: CMakeLists.txt  Global.cpp  WindowUtils.cpp  xmake.lua
nativelibs/src/bridge/: WindowUtils.cpp
nativelibs/src/linux/: WindowUtils.cpp
nativelibs/src/macos/: WindowUtils.mm
nativelibs/src/windows/: WindowUtils.cpp  WindowsUtils.cpp
nativelibs/tests/unittests/: CMakeLists.txt
nativelibs/xmake/: meta_info.lua  options.lua
nativelibs/xmake/modules/: handle_on_config.lua  handle_require_packages.lua  header_defines.lua  summary_output.lua
nativelibs/xmake/toolchains/atomui/: check.lua  xmake.lua
references/: Code Style.md  docfx.json  index.md
samples/AtomUI.Demo.Desktop/: App.axaml  App.axaml.cs  AtomUI.Demo.Desktop.csproj  AtomUI.Demo.Desktop.csproj.DotSettings  Program.cs  Roots.xml  app.manifest
scripts/: !Nuget.Local.bat  !Nuget.bat  !Package.All.Release.bat  BuildAtomUINative.ps1  PublishToLocalSources.ps1
src/AtomUI.Base/: AtomUI.Base.csproj  Common.cs  Dimension.cs  OperatingSystemType.cs  ServiceLocatorExtensions.cs  SimpleServiceLocator.cs  StdPseudoClass.cs
src/AtomUI.Controls.ColorPicker/: AbstractColorPicker.cs  AbstractColorPickerFlyout.cs  AtomUI.Controls.ColorPicker.csproj  AtomUIColorPickerThemesProvider.axaml  AtomUIColorPickerThemesProvider.cs  ColorBlock.cs  ColorChangedEventArgs.cs  ColorPicker.cs  ColorPickerCollapse.cs  ColorPickerFlyout.cs  ColorPickerPalette.cs  ColorPickerToken.cs  (+7 more)
(+4702 files in other folders)
